[gd_scene load_steps=18 format=3 uid="uid://vfkyyhlhcoyy"]

[ext_resource type="PackedScene" uid="uid://blorwsk7msxwu" path="res://Scenes/entity.tscn" id="1_8c8vb"]
[ext_resource type="Script" path="res://Scenes/fisher.gd" id="2_6u87j"]
[ext_resource type="PackedScene" uid="uid://b5l7nm22qv6uc" path="res://Scenes/interaction_area.tscn" id="3_77v1w"]
[ext_resource type="PackedScene" uid="uid://duap7i25qidv2" path="res://Scenes/speech.tscn" id="5_s8lh8"]
[ext_resource type="Texture2D" uid="uid://ckhdkpiot06vi" path="res://Sprites/Fisher3.png" id="6_8q7rs"]
[ext_resource type="PackedScene" uid="uid://ck4yvougmk8yw" path="res://inventory/fisher_shop_ui2.tscn" id="6_uulha"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k0xk"]
size = Vector2(20, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilqb1"]
atlas = ExtResource("6_8q7rs")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkr8h"]
atlas = ExtResource("6_8q7rs")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy6yw"]
atlas = ExtResource("6_8q7rs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy2au"]
atlas = ExtResource("6_8q7rs")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88dbq"]
atlas = ExtResource("6_8q7rs")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ctu4"]
atlas = ExtResource("6_8q7rs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tgdja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilqb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkr8h")
}],
"loop": true,
"name": &"after_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy6yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy2au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88dbq")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ctu4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1g171"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5jie7"]
radius = 24.0208

[sub_resource type="CircleShape2D" id="CircleShape2D_hj1md"]
radius = 24.0208

[node name="Fisher" instance=ExtResource("1_8c8vb")]
collision_layer = 4
collision_mask = 21
script = ExtResource("2_6u87j")

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-20, -1.5)
shape = SubResource("RectangleShape2D_1k0xk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
sprite_frames = SubResource("SpriteFrames_tgdja")
autoplay = "default"

[node name="InteractionAreaShop" parent="." index="3" instance=ExtResource("3_77v1w")]
action_name = "talk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionAreaShop" index="0"]
position = Vector2(-20, 0)
shape = SubResource("CircleShape2D_1g171")

[node name="InteractionArea" parent="." index="4" instance=ExtResource("3_77v1w")]
action_name = "pick up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea" index="0"]
position = Vector2(-20, 0)
shape = SubResource("CircleShape2D_5jie7")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]

[node name="Speech" parent="CanvasLayer" index="0" instance=ExtResource("5_s8lh8")]
visible = false
offset_left = 147.0
offset_top = 597.0
offset_right = 147.0
offset_bottom = 213.0
sprite_sheet = ExtResource("6_8q7rs")
hframes = 3
frame_index = 6

[node name="FisherShopUI" parent="CanvasLayer" index="1" instance=ExtResource("6_uulha")]
visible = false

[node name="PlayerLeft" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLeft" index="0"]
position = Vector2(-20, 0)
shape = SubResource("CircleShape2D_hj1md")

[node name="HitLabel" parent="." index="8"]
text = "Get away!"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_exited" from="PlayerLeft" to="." method="_on_player_left_body_exited"]
